# acontrol

./: .gitignore  Cargo.toml  Cross.toml  README.md  build_cross.sh
.cargo/: config  config.toml
case/: case_bottom.stl  case_middle.stl  case_top.stl
cli/go/src/: acontrol-cli.go  command_action.go  command_line.go  finger_command_action.go  nfc_command_action.go  options.go  service.go
docs/: _config.yml  index.md
docs/.sass-cache/01c1dc43e7ddb2df23d2da619e7d06d0c7775f91/: _base.scssc  _layout.scssc  _syntax-highlighting.scssc
docs/.sass-cache/fb636319f77477652d4f24c5d2f4ebbf34036700/: minima.scssc
docs/_posts/: 2019-04-21-welcome-to-jekyll.markdown
docs/_site/: 404.html  feed.xml  index.html
docs/_site/about/: index.html
drivers/linux/pi/: Makefile  REDAME  buzzer.mod.c  buzzer_drv.c  buzzer_drv.h  buzzer_ioctl.h  buzzer_pcm.c  buzzer_pcm.h  neopixel.mod.c  neopixel_drv.c  neopixel_drv.c.save  (+4 more)
hat/eagle/: acontrol.brd  acontrol.sch
hat/kikad/: hat.kicad_prl  hat.kicad_pro
hat/spice/: 24AC.asc  24AC_new.asc  24AC_only.asc
mobile/abeacon/: README.md  flutter_native_splash.yaml  pubspec.yaml
service/: acontrol.service
src/: audio.rs  bt.rs  display.rs  fingerprint.rs  log.rs  main.rs  nfc.rs  persist.rs  server.rs  system.rs
src/audio/: buzzer.rs  mod.rs
src/bt/: bluez.rs
src/display/: mod.rs  neopixel.rs
src/fingerprint/: gt521fx.rs  mod.rs  mod.rs.save
src/log/: console.rs  file.rs
src/nfc/: mfrc522.rs  mod.rs  pn532_spi.rs
src/persist/: mod.rs  sqlite_persist.rs
src/server/: mod.rs  webserver.rs
src/service/: mod.rs
(+65 files in other folders)
