[package]

name = "acontrol"
version = "0.0.1"
authors = [ "otavio.ribeiro@gmail.com" ]

[dependencies]
libc = "*"
clap = "2.26.0"
spidev = "0.3.0"
sysfs_gpio = "0.5.3"
iron = "*"
router = "*"
lazy_static = "*"
nix = "0.13"
rusqlite = "0.16"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serialport = "*"

[dependencies.bodyparser]
git = "https://github.com/iron/body-parser.git"
