[profile.release]
codegen-units = 1

[package]
name = "acontrol"
version = "0.0.2"
authors = [ "otavio.ribeiro@gmail.com" ]
edition = "2018"

[dependencies]
libc = "*"
clap = "2.26.0"
spidev = "0.3.0"
sysfs_gpio = "0.5.3"
iron = "*"
router = "*"
lazy_static = "*"
nix = "0.13"
rusqlite = "0.23"
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.85"
serialport = "3.3.0"
futures = "*"
tokio = { version = "1.21.1", features = ["full"] }
async-trait = "0.1.57"

[dependencies.bluer]
git = "https://github.com/otaviojr/bluer.git"
branch = "monitor1"
version = "0.15.0"
features = ["full"]


[dependencies.bodyparser]
git = "https://github.com/iron/body-parser.git"
